added letter spacing to h1

--- a/src/main.css
+++ b/src/main.css
@@ -3500,14 +3500,15 @@ body.modal-open {
   /* line 10, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
   .hero h1 {
     margin: 0;
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    letter-spacing: 3px; }
   @media screen and (max-width: 991px) {
-    /* line 16, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
+    /* line 17, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
     .hero h1 {
       text-align: center;
       margin-top: 167.5px; } }
   @media screen and (min-width: 992px) {
-    /* line 24, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
+    /* line 25, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
     .hero h1 {
       font-size: 90px;
       line-height: 320px;
@@ -3515,18 +3516,18 @@ body.modal-open {
       text-shadow: 4px 3px 0 #313436, 9px 8px 0 rgba(0, 0, 0, 0.15); } }
 
 @media screen and (max-width: 991px) {
-  /* line 33, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
+  /* line 34, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
   .hero.mod-large {
     height: 365px; }
-    /* line 38, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
+    /* line 39, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
     .hero.mod-large .overlay {
       height: 365px; } }
 
 @media screen and (min-width: 992px) {
-  /* line 33, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
+  /* line 34, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
   .hero.mod-large {
     height: 640px; }
-    /* line 47, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
+    /* line 48, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
     .hero.mod-large .overlay {
       height: 640px; } }
 
