--- a/src/app/shared/scss/_hero.scss
+++ b/src/app/shared/scss/_hero.scss
@@ -10,6 +10,7 @@
     h1 {
         margin: 0;
         color: $primary;
+        letter-spacing: 3px;
     }
 
     @media screen and (max-width: $screen-sm-max) {
