restyled tic tac toe game

--- a/src/main.css
+++ b/src/main.css
@@ -4239,7 +4239,7 @@ button {
     color: #FFBD88; }
   /* line 61, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
   .tic-tac-toe .board i.fa-circle-o {
-    color: #6991AC; }
+    color: #d2d2d2; }
   /* line 65, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
   .tic-tac-toe .board .right-bottom {
     border-right: 2px solid #FFBD88;
