--- a/src/main.scss
+++ b/src/main.scss
@@ -48,3 +48,4 @@
 @import "app/to-do-list/scss/to-do-list";
 @import "app/stop-watch/scss/stop-watch";
 @import "app/d3/scss/d3";
+@import "app/components/scss/components";
