--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -12,4 +12,11 @@
 		</div>
     </section>
 
+    <section class="content">
+    	<div class="container">
+    		<h1>color</h1>
+    		<div class="circle-color"></div>
+    	</div>
+    </section>
+
 </div>
