added color scheme to component page

--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -15,7 +15,10 @@
     <section class="content">
     	<div class="container">
     		<h1>color</h1>
-    		<div class="circle-color"></div>
+    		<div class="circle-color mod-accent"></div>
+    		<div class="circle-color mod-light"></div>
+    		<div class="circle-color mod-text"></div>
+
     	</div>
     </section>
 
