--- a/src/app/components/scss/_components.scss
+++ b/src/app/components/scss/_components.scss
@@ -1,9 +1,21 @@
 .components {
+
 	.circle-color {
-		border: 1px solid $accent;
 		border-radius: 50%;
-		background-color: $accent;
 		width: 62px;
 		height: 62px;
+		display: inline-block;
+	}
+
+	.circle-color.mod-accent {
+		background-color: $accent;
+	}
+
+	.circle-color.mod-light {
+		background-color: $primary-light;
+	}
+
+	.circle-color.mod-text {
+		background: $text-secondary;
 	}
 }
