--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -16,9 +16,9 @@
     	<div class="container">
     		<h1>color</h1>
     		<div class="circle-color mod-accent"></div>
+    		<div class="circle-color mod-dark"></div>
     		<div class="circle-color mod-light"></div>
     		<div class="circle-color mod-text"></div>
-
     	</div>
     </section>
 
