added card to components

--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -14,11 +14,21 @@
 
     <section class="content">
     	<div class="container">
-    		<h1>color</h1>
+    		<h1>Color</h1>
     		<div class="circle-color mod-accent"></div>
     		<div class="circle-color mod-dark"></div>
     		<div class="circle-color mod-light"></div>
     		<div class="circle-color mod-text"></div>
+    	</div>
+    </section>
+    <hr>
+
+     <section class="card-section">
+    	<div class="container">
+    		<h1>Card</h1>
+    		<div class="card-container">
+                <p class="card-container-header">card</p>
+            </div>
     	</div>
     </section>
 
