--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -15,10 +15,10 @@
     <section class="content">
     	<div class="container">
     		<h1>Color</h1>
-    		<div class="circle-color mod-accent"></div>
-    		<div class="circle-color mod-dark"></div>
-    		<div class="circle-color mod-light"></div>
-    		<div class="circle-color mod-text"></div>
+    		<div class="circle-color mod-accent">accent</div>
+    		<div class="circle-color mod-dark">dark</div>
+    		<div class="circle-color mod-light">light</div>
+    		<div class="circle-color mod-text">text</div>
     	</div>
     </section>
     <hr>
