--- a/src/app/components/scss/_components.scss
+++ b/src/app/components/scss/_components.scss
@@ -5,6 +5,9 @@
 		width: 62px;
 		height: 62px;
 		display: inline-block;
+		line-height: 62px;
+		text-align: center;
+		color: #fff;
 	}
 
 	.circle-color.mod-accent {
