--- a/src/app/components/scss/_components.scss
+++ b/src/app/components/scss/_components.scss
@@ -1,5 +1,10 @@
 .components {
 
+	.color-container {
+		text-align: center;
+		padding: 88px 0;
+	}
+
 	.circle-color {
 		border-radius: 50%;
 		width: 62px;
@@ -8,6 +13,12 @@
 		line-height: 62px;
 		text-align: center;
 		color: #fff;
+		margin: 0 15px;
+	}
+
+	h1 {
+		margin: 0;
+		margin-bottom: 32px;
 	}
 
 	.circle-color.mod-accent {
@@ -26,7 +37,7 @@
 		background: $primary-dark;
 	}
 
-	hr {
-		margin-top: 32px;
+	.card-container {
+		margin-top: 0;
 	}
 }
