--- a/src/main.css
+++ b/src/main.css
@@ -4665,6 +4665,11 @@ button {
     margin-bottom: 64px; } }
 
 /* line 3, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+.components .color-container {
+  text-align: center;
+  padding: 88px 0; }
+
+/* line 8, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
 .components .circle-color {
   border-radius: 50%;
   width: 62px;
@@ -4672,24 +4677,30 @@ button {
   display: inline-block;
   line-height: 62px;
   text-align: center;
-  color: #fff; }
+  color: #fff;
+  margin: 0 15px; }
 
-/* line 13, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+/* line 19, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+.components h1 {
+  margin: 0;
+  margin-bottom: 32px; }
+
+/* line 24, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
 .components .circle-color.mod-accent {
   background-color: #D85339; }
 
-/* line 17, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+/* line 28, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
 .components .circle-color.mod-light {
   background-color: #FFBD88; }
 
-/* line 21, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+/* line 32, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
 .components .circle-color.mod-text {
   background: #81888D; }
 
-/* line 25, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+/* line 36, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
 .components .circle-color.mod-dark {
   background: #F4A460; }
 
-/* line 29, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
-.components hr {
-  margin-top: 32px; }
+/* line 40, /Users/David/Desktop/git/resume/src/app/components/scss/_components.scss */
+.components .card-container {
+  margin-top: 0; }
