added button to components page

--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -25,6 +25,17 @@
     </section>
     <hr>
 
+    <section class="button">
+        <div class="container">
+            <div class="button-container">
+                <button>
+                    Lorem ipsum
+                </button>
+            </div>
+        </div>
+    </section>
+    <hr>
+
      <section class="card-section">
     	<div class="container">
     		<h1>Card</h1>
