--- a/src/app/components/html/components.html
+++ b/src/app/components/html/components.html
@@ -25,6 +25,17 @@
     </section>
     <hr>
 
+    <section class="fonts">
+        <div class="container">
+            <h1>Fonts</h1>
+            <p class="font-text" style="font-weight: 300">Light 300</p>
+            <p class="font-text" style="font-weight: 400">Normal 400</p>
+            <p class="font-text" style="font-weight: 500">Medium 500</p>
+            <p class="font-text" style="font-weight: 700">Bold 700</p>
+        </div>
+    </section>
+    <hr>
+
     <section class="button">
         <div class="container">
             <div class="button-container">
