--- a/src/app/components/scss/_components.scss
+++ b/src/app/components/scss/_components.scss
@@ -1,6 +1,6 @@
 .components {
 
-	.color-container, .button-container {
+	.color-container, .button-container, .fonts {
 		text-align: center;
 		padding: 88px 0;
 	}
@@ -19,6 +19,11 @@
 	h1 {
 		margin: 0;
 		margin-bottom: 32px;
+	}
+
+	.font-text {
+		padding: 22px 0;
+		font-size: 24px;
 	}
 
 	.circle-color.mod-accent {
