--- a/src/app/tic-tac-toe/html/modals/illegal-move.html
+++ b/src/app/tic-tac-toe/html/modals/illegal-move.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<!-- <div class="modal-header">
     <h3 class="modal-title">Illegal Move</h2>
 </div>
 
@@ -9,3 +9,4 @@
 <div class="modal-footer">
     <button ng-click="modalInfoVM.ok()">OK</button>
 </div>
+ -->
