Add fix width container.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,3 +4,8 @@ $gray-light: #cecfd1;
 $gray-lightest: #f7f7f7;
 
 $tango: #f06d21;
+
+$screen-lg: 1200px;
+$screen-md: 992px;
+$screen-sm: 768px;
+$screen-xs: 480px;
