Update homepage copy.

--- a/src/components/Shared/Callout.scss
+++ b/src/components/Shared/Callout.scss
@@ -9,7 +9,7 @@
 }
 
 .callout__inner-container {
-    height: 550px;
+    padding: 32px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
