--- a/src/components/Shared/Callout.scss
+++ b/src/components/Shared/Callout.scss
@@ -1,11 +1,16 @@
 @import '../../styles/variables';
 
 .callout__outer-container {
-    background: $gray-light;
+    // background: $gray-light;
+    //background: rgba(224,254,251,0.5);
+}
+
+.callout__outer-container--picture {
+    //background-image: url(../../images/today.jpeg);
 }
 
 .callout__outer-container--light {
-    background: rgba(224,254,251,0.9);
+    // background: rgba(224,254,251,0.1);
 }
 
 .callout__inner-container {
@@ -15,8 +20,18 @@
     align-items: center;
 }
 
+.callout__inner-container--reversed {
+    flex-direction: row-reverse;
+}
+
 .callout__picture {
-    border: 1px solid $tango;
-    width: 500px;
-    height: 450px;
+    width: 350px;
+    border-radius: 50%;
+}
+
+.callout__picture--large {
+    width: 550px;
+    border-radius: 0;
+    margin-top: -32px;
+    border: 1px solid $gray-light;
 }
