--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+
+    /* Background pattern from Subtle Patterns */
+    background-image: url(./images/husk_@2X.png);
+    background-repeat:repeat;
 }
