--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,23 @@ body {
     background-image: url(./images/husk_@2X.png);
     background-repeat:repeat;
 }
+
+
+/* Sticky footer starts */
+html, body, main, #root {
+    height: 100%;
+    margin: 0;
+}
+.wrapper {
+    min-height: 100%;
+
+    /* Equal to height of footer */
+    /* But also accounting for potential margin-bottom of last child */
+    margin-bottom: -115px;
+}
+footer,
+.push {
+    height: 115px;
+}
+
+/* Sticky footer ends */
