--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@
 
 .footer__container {
     height: 115px;
+    //background: rgba(255, 255, 255, .25);
 
     display: flex;
     justify-content: center;
@@ -9,6 +10,6 @@
 }
 
 .footer__license {
-    color: $gray-dark;
+    color: $gray;
     margin: 0;
 }
