--- a/src/components/Shared/Callout.scss
+++ b/src/components/Shared/Callout.scss
@@ -22,6 +22,11 @@
 
 .callout__inner-container--reversed {
     flex-direction: row-reverse;
+
+    /* Tablet and Mobile */
+    @media only screen and (max-width : $screen-md - 1px) {
+        flex-direction: column-reverse;
+    }
 }
 
 .callout__picture {
@@ -34,4 +39,16 @@
     border-radius: 0;
     margin-top: -32px;
     border: 1px solid $gray-light;
+
+    /* Laptop */
+    @media only screen and (min-width : $screen-md) and (max-width : $screen-lg - 1px) {
+        width: 425px;
+        margin: 0;
+    }
+
+    /* Tablet and Mobile */
+    @media only screen and (max-width : $screen-md - 1px) {
+        margin-top: 32px;
+        width: 370px;
+    }
 }
