--- a/src/components/ResumeView/Experience.scss
+++ b/src/components/ResumeView/Experience.scss
@@ -1,8 +1,23 @@
 @import '../../styles/variables';
 
+.experience__container {
+    display: flex;
+    margin-top: 32px;
+
+    /* Laptop, tablet, mobile */
+    @media only screen and (max-width : $screen-md) {
+        display: block;
+    }
+}
+
 .experience__time {
     min-width: 250px;
     color: $gray;
+
+    /* Laptop, tablet, mobile */
+    @media only screen and (max-width : $screen-md) {
+        margin-bottom: 10px;
+    }
 }
 
 .experience__title {
