--- a/src/components/ResumeView/Project.scss
+++ b/src/components/ResumeView/Project.scss
@@ -1,5 +1,15 @@
 @import '../../styles/variables';
 
+.project__container {
+    display: flex;
+    margin-top: 32px;
+
+    /* Laptop, tablet, mobile */
+    @media only screen and (max-width : $screen-md) {
+        display: block;
+    }
+}
+
 .project__title--dark {
     font-weight: bold;
     color: $tango;
@@ -8,4 +18,9 @@
 .project__time {
     min-width: 250px;
     color: $gray;
+
+    /* Laptop, tablet, mobile */
+    @media only screen and (max-width : $screen-md) {
+        margin-bottom: 10px;
+    }
 }
